kubernetes/k8s-resources/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
  namespace: demo-app
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
